WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
67388
[Qt][WK2] fast/loader tests failed after
r94178
https://bugs.webkit.org/show_bug.cgi?id=67388
Summary
[Qt][WK2] fast/loader tests failed after r94178
Fehér Zsolt
Reported
2011-09-01 04:59:30 PDT
This tests is: fast/loader/local-CSS-from-local.html fast/loader/local-JavaScript-from-local.html fast/loader/local-image-from-local.html
Attachments
Patch
(4.69 KB, patch)
2012-01-25 13:56 PST
,
Luciano Wolf
no flags
Details
Formatted Diff
Diff
Patch
(4.66 KB, patch)
2012-01-26 10:57 PST
,
Luciano Wolf
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Fehér Zsolt
Comment 1
2011-09-01 05:39:28 PDT
Tests Skipped in:
http://trac.webkit.org/changeset/94289
Luciano Wolf
Comment 2
2012-01-25 13:56:35 PST
Created
attachment 124004
[details]
Patch Applying the same fix used for Qt-WebKit1 from
bug #67254
[Qt][DRT] Normalize file:///tmp/LayoutTests in LayoutTestController::pathToLocalResource()
Simon Hausmann
Comment 3
2012-01-26 01:04:01 PST
Comment on
attachment 124004
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=124004&action=review
> Tools/WebKitTestRunner/InjectedBundle/qt/LayoutTestControllerQt.cpp:92 > + QString localTmpUrl(QLatin1String("file:///tmp/LayoutTests"));
Since this is Qt 5 it's better to write: QString localTmpUrl(QStringLiteral("..."));
> Tools/WebKitTestRunner/InjectedBundle/qt/LayoutTestControllerQt.cpp:93 > + QString givenUrl(QString(reinterpret_cast<const QChar*>(JSStringGetCharactersPtr(url)), JSStringGetLength(url)));
Why call the QString constructor twice? Can't you simply write: QString givenUrl(reinterpret_cast..., ...);
Luciano Wolf
Comment 4
2012-01-26 10:57:53 PST
Created
attachment 124146
[details]
Patch Applying suggested changes to the previous patch. Thanks Simon.
WebKit Review Bot
Comment 5
2012-01-26 12:19:20 PST
Comment on
attachment 124146
[details]
Patch Clearing flags on attachment: 124146 Committed
r106028
: <
http://trac.webkit.org/changeset/106028
>
WebKit Review Bot
Comment 6
2012-01-26 12:19:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug