[Qt][WK2] fast/loader tests failed after r94178 https://bugs.webkit.org/show_bug.cgi?id=67388

Patch by Luciano Wolf <luciano.wolf@openbossa.org> on 2012-01-26
Reviewed by Simon Hausmann.

Tools:

Applying the same fix used for Qt-WebKit1 from bug #67254 -
[Qt][DRT] Normalize file:///tmp/LayoutTests in LayoutTestController::pathToLocalResource()
https://bugs.webkit.org/show_bug.cgi?id=67254
Translate file:///tmp/LayoutTests/* urls into the repository LayoutTests directory, which is
derived from the running location of DumpRenderTree binary.

* WebKitTestRunner/InjectedBundle/qt/LayoutTestControllerQt.cpp:
(WTR::LayoutTestController::pathToLocalResource):

LayoutTests:

Removing the following tests from skipped list:
fast/loader/local-CSS-from-local.html
fast/loader/local-JavaScript-from-local.html
fast/loader/local-image-from-local.html

* platform/qt-wk2/Skipped:

Canonical link: https://commits.webkit.org/94014@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106028 268f45cc-cd09-0410-ab3c-d52691b4dbfc